src_gap/err2
In file included from TestCompilation.cpp:1:0:
list.h: In function ‘int PositionNthTrueBlist(const Face&, const int&)’:
list.h:47:14: error: ‘dynamic_bitset’ has not been declared
     if (b == dynamic_bitset::npos)
              ^~~~~~~~~~~~~~
In file included from TestCompilation.cpp:2:0:
StabChain.h: At global scope:
StabChain.h:489:10: error: ‘tpename’ has not been declared
 template<tpename Telt>
          ^~~~~~~
StabChain.h:490:40: error: ‘Telt’ was not declared in this scope
 std::vector<int> MovedPoints(StabChain<Telt> const& S)
                                        ^~~~
StabChain.h:490:44: error: template argument 1 is invalid
 std::vector<int> MovedPoints(StabChain<Telt> const& S)
                                            ^
StabChain.h: In function ‘std::vector<int> gap::MovedPoints(const int&)’:
StabChain.h:493:26: error: request for member ‘stabilizer’ in ‘S’, which is of non-class type ‘const int’
   for (auto & eChain : S.stabilizer)
                          ^~~~~~~~~~
StabChain.h:496:11: error: request for member ‘n’ in ‘S’, which is of non-class type ‘const int’
   int n=S.n;
           ^
StabChain.h: In lambda function:
StabChain.h:499:13: error: request for member ‘labels’ in ‘S’, which is of non-class type ‘const int’
       if (S.labels[eIdx].at(ePt) != ePt)
             ^~~~~~
In file included from TestCompilation.cpp:2:0:
StabChain.h: At global scope:
StabChain.h:910:1: error: expected unqualified-id before ‘template’
 template<typename Telt>
 ^~~~~~~~
StabChain.h: In function ‘bool gap::ExtendStabChain(gap::StabChain<Telt>&, const int&, const std::vector<int>&)’:
StabChain.h:974:46: error: ‘int_reducedm1’ was not declared in this scope
   return ChangeStabChain(Stot, TheLev, base, int_reducedm1);
                                              ^~~~~~~~~~~~~
StabChain.h: In function ‘bool gap::ReduceStabChain(gap::StabChain<Telt>&, const int&)’:
StabChain.h:981:44: error: ‘int_true’ was not declared in this scope
   return ChangeStabChain(Stot, TheLev, {}, int_true);
                                            ^~~~~~~~
StabChain.h:981:44: note: suggested alternative: ‘intptr_t’
   return ChangeStabChain(Stot, TheLev, {}, int_true);
                                            ^~~~~~~~
                                            intptr_t
StabChain.h: In function ‘bool gap::TestEqualityAtLevel(const gap::StabChain<Telt>&, const gap::StabChain<Telt>&, const int&)’:
StabChain.h:1010:5: error: ‘ine’ was not declared in this scope
     ine lenL=L.stabilizer[eLev].transversal.size();
     ^~~
StabChain.h:1010:5: note: suggested alternative: ‘int’
     ine lenL=L.stabilizer[eLev].transversal.size();
     ^~~
     int
StabChain.h:1011:9: warning: init-statement in selection statements only available with -std=c++1z or -std=gnu++1z
     if (int u=0; u<lenL; u++) {
         ^~~
StabChain.h:1011:20: error: ‘lenL’ was not declared in this scope
     if (int u=0; u<lenL; u++) {
                    ^~~~
StabChain.h:1011:20: note: suggested alternative: ‘lev’
     if (int u=0; u<lenL; u++) {
                    ^~~~
                    lev
StabChain.h:1011:24: error: expected ‘)’ before ‘;’ token
     if (int u=0; u<lenL; u++) {
                        ^
StabChain.h:1011:5: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
     if (int u=0; u<lenL; u++) {
     ^~
StabChain.h:1011:26: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     if (int u=0; u<lenL; u++) {
                          ^
StabChain.h:1011:26: error: ‘u’ was not declared in this scope
make: *** [TestCompilation.o] Error 1
